--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,13 +5,13 @@ spring:
       ddl-auto: create
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DATABASE_URL}:3306/boro?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-    username: ${MYSQL_USER}
-    password: ${MYSQL_PASSWORD}
+    url: jdbc:mysql://localhost:3306/boro?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: 1234
   cache:
     type: redis
     redis:
-      host: ${REDIS_URL}
+      host: localhost
       port: 6379
       time-to-live: 10000
 
