--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,34 +7,34 @@ services:
     environment:
       MYSQL_DATABASE: boro
       MYSQL_ROOT_PASSWORD: 1234
+    ports:
+      - 3306:3306
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./data/mysql:/var/lib/mysql
 
   redis-server:
     image: redis:latest
     container_name: redis_server
     restart: always
-    volumes:
-      - redis_data:/data
-
-  spring-boot-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: always
-    environment:
-      DATABASE_URL: mysql-server
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 1234
-      REDIS_URL: redis-server
     ports:
-      - 8080:8080
-    depends_on:
-      - mysql-server
-      - redis-server
+      - 6379:6379
+    volumes:
+      - ./data/redis:/data
 
-volumes:
-  mysql_data:
-    driver: local
-  redis_data:
-    driver: local
+#  spring-boot-app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    restart: always
+#    environment:
+#      DATABASE_URL: mysql-server
+#      MYSQL_USER: root
+#      MYSQL_PASSWORD: 1234
+#      REDIS_URL: redis-server
+#    ports:
+#      - 8080:8080
+#    depends_on:
+#      - mysql-server
+#      - redis-server
+
+
