--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_DATABASE: boro
       MYSQL_ROOT_PASSWORD: 1234
     ports:
-      - 3306:3306
+      - 43306:3306
     volumes:
       - ./data/mysql:/var/lib/mysql
 
@@ -17,24 +17,25 @@ services:
     container_name: redis_server
     restart: always
     ports:
-      - 6379:6379
+      - 46379:6379
     volumes:
       - ./data/redis:/data
 
-#  spring-boot-app:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    restart: always
-#    environment:
-#      DATABASE_URL: mysql-server
-#      MYSQL_USER: root
-#      MYSQL_PASSWORD: 1234
-#      REDIS_URL: redis-server
-#    ports:
-#      - 8080:8080
-#    depends_on:
-#      - mysql-server
-#      - redis-server
+  spring-boot-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    environment:
+      DATABASE_URL: mysql-server
+      DATABASE_PORT: 3306
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 1234
+      REDIS_URL: redis-server
+    ports:
+      - 48081:8080
+    depends_on:
+      - mysql-server
+      - redis-server
 
 
